consistent author naming

--- a/book.bib
+++ b/book.bib
@@ -341,7 +341,7 @@
 }
 
 @Article{DeGeus1995,
-  author   = {{De Geus}, Eco J.C. and Willemsen, Gonneke H.M. and Klaver, Coert H.A.M. and {Van Doornen}, Lorenz J.P.},
+  author   = {{De Geus}, E.J.C. and Willemsen, Gonneke H.M. and Klaver, Coert H.A.M. and {Van Doornen}, Lorenz J.P.},
   title    = {{Ambulatory measurement of respiratory sinus arrhythmia and respiration rate}},
   journal  = {Biological Psychology},
   year     = {1995},
@@ -1886,7 +1886,7 @@ year = {1999}
 }
 
 @Article{Willemsen1996,
-  author  = {Willemsen, Gonneke H.M. and {De Geus}, Eco J.C. and Klaver, Coert H.A.M. and {Van Doornen}, Lorenz J.P. and Carroll, Douglas},
+  author  = {Willemsen, Gonneke H.M. and {De Geus}, E.J.C. and Klaver, Coert H.A.M. and {Van Doornen}, Lorenz J.P. and Carroll, Douglas},
   title   = {{Ambulatory monitoring of the impedance cardiogram}},
   journal = {Psychophysiology},
   year    = {1996},
