--- a/aph-catalogue.Rmd
+++ b/aph-catalogue.Rmd
@@ -70,11 +70,11 @@ Table: (\#tab:APHresearch) Overview of EMA research in the APH MH consortium.
 
 | **Aspect**     | **Description**                                              | 
 |:---------------|:-------------------------------------------------------------|
-| **Project team** | Femke Lamers, PhD, Brenda Penninx, PhD (VUmc), Harriette Riese, PhD (UMCG), with the NESDA consortium|
+| **Project team** | Femke Lamers, PhD, Brenda Penninx, PhD (VUmc), Harriette Riese, PhD (UMCG), Robert Schoevers, PhD (UMCG), the NESDA consortium|
 | **APH site** | VUmc, GGZ inGeest, Amsterdam|
-| **Project(s)**   | The main aim of NESDA is to examine the long-term (eight-year) course and prognosis and co-morbidity of anxiety and depression, to improve quality of care and prevent chronicity [@Penninx2008]. Within "Wave 6", the 9-year follow-up of the NESDA study (2015 - 2017), a selected sample of NESDA participants with symptoms of depression and healthy controls (n = 384) was invited for an EMA diary/actigraphy study. |
-| **EMA measures** | NESDA EMA study data were collected to explore the dynamic interplay between cognitions, emotions, behavior and environment in daily life of individuals, the feasibility of EMA in participants with affective disorders, and chronotype and diurnal patterns of activity in depressed versus non-depressed participants. EMA participants started within 31 days after the regular NESDA assessments (face-to-face interview and self-report measures). Participants could use their own smartphone (Android / IPhone) if they had sufficient data or access to WIFI for at least 80% of the two-week time period, and could borrow a phone if needed. To record the amount of physical activity during EMA monitoring, participants were also asked to wear an accelerometer (GENEActiv, 30Hz) on their non-dominant wrist, 24 hours a day, for two weeks. Recording started on the evening prior to the first EMA assessment and continued until the morning after the last assessment.|
-|               | Participants were prompted five times a day to complete a self-report questionnaire comprising ~30 items. Items (7-point Likert scale, ranging from 'not [at all]' to 'very') tapped 1) Valance (unpleasant to pleasant) and Arousal (calm to excited), 2) Current state, symptoms of Depression/Anxiety, Physical Condition, 3) Social context, 4) Sleep, 5) daily uplifts/hassles, 6) Activities, and 7) Substance use. Examples of items were: *"I feel down"*, *"I feel cheerful"* and *"Where are you now"* (e.g. at the neighbor's house). In addition, there was an additional questionnaire inquiring about questionnaire burden and an open-ended question for general comments on circumstances that might influence answers. The items on Valance, Arousal and Current State have been used in a previous study; the Uncovering the Positive Potential of Emotional Reactivity (UPPER) study [@Bennik2015]. The other items are based on items from earlier EMA studies, such as the work by Mehl and colleagues [@Mehl2012], van Os and colleagues [@Wichers2012] and studies performed at the Interdisciplinary Center of Psychopathology and Emotion regulation (ICPE), such as the Mood and Movement in Daily life (MOOVD) study [@Booij2015] |
+| **Project(s)**   | The main aim of NESDA is to examine the long-term course and prognosis of anxiety and depression [@Penninx2008]. Within the 9-year follow-up of the NESDA study (2015 - 2017), NESDA participants (n = 384) were invited for an EMA diary/actigraphy study. |
+| **EMA measures** | NESDA EMA study data were collected to explore the dynamic interplay between cognitions, emotions, behavior and environment in daily life of depressed versus non-depressed participants. EMA participants started within 31 days after the regular NESDA assessments (face-to-face interview and self-report measures). Participants could use their own smartphone (Android / IPhone) if they had sufficient data or access to WIFI for at least 80% of the two-week time period, and could borrow a phone if needed. To record the amount of physical activity during EMA monitoring, participants were also asked to wear an accelerometer (GENEActiv, 30Hz) on their non-dominant wrist, 24 hours a day, for two weeks. Recording started on the evening prior to the first EMA assessment and continued until the morning after the last assessment.|
+|               | Participants were prompted five times a day to complete a self-report questionnaire comprising ~30 items. Items (7-point Likert scale, ranging from 'not [at all]' to 'very') tapped 1) mood and cognition, 2) physical conditions, 3) social context, 4) sleep, 5) daily uplifts/hassles, 6) activities, and 7) substance use. Examples of items were: *"I feel down"*, *"I feel cheerful"* and *"Where are you now"* (e.g. at the neighbor's house). In addition, there was an additional questionnaire inquiring about questionnaire burden and an open-ended question for general comments on circumstances that might have influenced answers. The items on Valance, Arousal and Current State have been used in a previous study; the Uncovering the Positive Potential of Emotional Reactivity (UPPER) study [@Bennik2015]. The other items are based on items from earlier EMA studies, such as the work by Mehl and colleagues [@Mehl2012], van Os and colleagues [@Wichers2012] and studies performed at the Interdisciplinary Center of Psychopathology and Emotion regulation (ICPE), such as the Mood and Movement in Daily life (MOOVD) study [@Booij2015] |
 | **Platform used** | RoQua (http://www.roqua.nl/), GENEActiv accelerometer. See also Chapter \@ref(ema-instruments-catalogue)). |
 | **Contact Information** | http://research.vumc.nl/en/persons/brenda-penninx |
 |                         | http://research.vumc.nl/en/persons/femke-lamers   |
@@ -90,7 +90,7 @@ Table: (\#tab:APHresearch) Overview of EMA research in the APH MH consortium.
 | **APH site** | VUmc, GGZ inGeest |
 | **Project** | The European (EU H2020-IMI) *RADAR-CNS* project (Remote Assessment of Disease and Relapse - Central Nervous System; http://www.radar-cns.org/) aims to study the potential of wearable devices and smartphone technology to help prevent and treat depression, multiple sclerosis and epilepsy. The project, which started in 2016, was designed to examine how remote measurement technologies can monitor and improve quality of life and psychological well-being of patients. Within this project, the VUmc/GGZ inGeest research site focuses on depression (RADAR-MDD), in collaboration with King's College, London (KCL). |
 | |  Technical goals of the project are to 1) build an end-to-end open source system with generalized data aggregation capabilities, and 2) explore (technological aspects of) big data solutions. Clinical goals of the project are to 1) assess the feasibility of continuous monitoring of patients, and 2) predict disease onset or relapse with big data prevention and risk assessment approaches. |
-| **EMA Measures** | Data are collected during a 2-year period, in which EMA will be activated every 6 weeks for 6 consecutive days. Active EMA outcomes include (variability in) sleep quality, levels of activity, social interactions, mood, cognitive performance and stress as possible predictors of the clinical course of participants. Passive EMA measures include location and movement (GPS; actigraphy), skin temperature, galvanic skin conductance, heart rate (-variability), voice recognition, social interaction data (call/message logs), and smartphone app usage patterns.|
+| **EMA Measures** | Data are collected during a 2-year period, in which EMA will be activated every 6 weeks for 6 consecutive days. Active EMA outcomes include (variability in) sleep quality, activity, social interactions, mood, and stress as possible predictors of the clinical course of participants. Passive EMA measures include location and movement (GPS; actigraphy), skin temperature, galvanic skin conductance, heart rate (-variability), voice recognition, social interaction data (call/message logs), and smartphone app usage patterns.|
 | **Platform(s)**  | In the RADAR project, an comprehensive EMA platform is developed (the RADAR RMT application; see http://thehyve.nl/cases/radar-cns and http://github.com/RADAR-base); This platform focuses on classes of data rather than specific devices, to enhance modularity and adaptability, as new devices become available. The platform will be used to integrate and control data streams from an EMA smartphone app and several wearable device (including the [Empatica E4 Wristband](http://www.empatica.com/research/e4/), Pebble 2 Smart-watch, Biovotion VSM, Faros 180, and [Fitbit](http://www.fitbit.com/home). |
 | **Contact**      | http://research.vumc.nl/en/persons/femke-lamers |
 |                  | http://research.vumc.nl/en/persons/brenda-penninx |
@@ -178,13 +178,15 @@ Table: (\#tab:APHresearch) Overview of EMA research in the APH MH consortium.
 
 | **Aspect**       | **Description**                                              | 
 |:-----------------|:-------------------------------------------------------------|
-| **Project team** | Frank J. Snoek, PhD, Maartje de Wit, PhD, and others |
-| **APH site** | VUmc, AMC |
+| **Project team** | Frank J. Snoek, PhD, Maartje de Wit, PhD, Cat Racca, MSC, Linda T. Muijs, MSc |
+| **APH site** | VUmc |
 | **Project**      | In the MERITS study ('Momentary assessment of patient Experiences in Real life of Insulin Glargine 300 in Type 1 diabetes'), Snoek an co-workers use EMA to explorer whether a) blood glucose variability is associated with changes in wellbeing (mood / energy) during waking time, whether b)  switching to U-300 results in less glucose variability and translates into improved mood over time within patients, and whether c) if individual differences (profiles) can be distinguished with regard to the (strength of the) association between glucose variability and changes in mood. 
 | **EMA measures** | Adult patients (N = 70) with type 1 diabetes, will be (randomly) prompted to answer questions on mood (based on POMS questionnaire), diabetes distress, fear of hypoglycemia and sleep. 
 | **Platform used**| Ilumivu (http://ilumivu.com, see also Chapter \@ref(ema-instruments-catalogue)). |
 | **Contact**      | http://research.vumc.nl/en/persons/frank-snoek |
 |                  | http://research.vumc.nl/en/persons/maartje-de-wit |
+                  | http://research.vumc.nl/en/persons/cati-racca |
+                  | http://research.vumc.nl/en/persons/linda-muijs |
 
 
 ## Suicidal Ideation
