--- a/book.bib
+++ b/book.bib
@@ -872,6 +872,16 @@
   publisher={BioMed Central}
 }
 
+@article{Kim2017,
+  author = {Kim, Y. and White, T. and Wijndaele, K. and Sharp, S. J. and Wareham, N. J. and Brage, S.},
+  doi = {10.1038/ijo.2017.122},
+  journal = {International Journal of Obesity},
+  pmid = {28529332},
+  title = {{Adiposity and grip strength as long-Term predictors of objectively measured physical activity in 93 015 adults: The UK Biobank study}},
+  year = {2017}
+}
+
+
 @InCollection{Kirchner2013,
   author    = {Kirchner, Thomas R. and Shiffman, Saul},
   title     = {{Ecological Momentary Assessment}},
@@ -1440,6 +1450,12 @@ year = {1999}
   doi      = {10.1007/s11920-013-0359-2},
   keywords = {Actigraphy,Assessment,Circadian rhythms,Diagnosis,Measurement,Motor activity,Movement,Neuropathology,Pharmacological interventions,Psychiatry,Psychosis,Schizophrenia,Sleep,Systematic review},
   pmid     = {23686258},
+}
+
+
+@personalcommunication{LamersENMOcutoff,
+  author = "Lamers, Femke",
+  date = "2018-11-15"
 }
 
 @Article{Lindert2018,
