--- a/book.bib
+++ b/book.bib
@@ -124,21 +124,6 @@
 }
 
 
-@article{Borsboom2016,
-  author = {Borsboom, Denny},
-  doi = {10.1002/wps.20375},
-  isbn = {0000000000000},
-  issn = {20515545},
-  journal = {World Psychiatry},
-  keywords = {Psychopathology,diagnosis,mental disorders,mental health,network approach,resilience,symptom networks,treatment,vulnerability},
-  number = {1},
-  pages = {5--13},
-  pmid = {28127906},
-  title = {{A network theory of mental disorders}},
-  volume = {16},
-  year = {2016}
-}
-
 @Article{Borsboom2013,
   author   = {Borsboom, Denny and Cramer, Ang{\'{e}}lique O J},
   title    = {{Network analysis: An integrative approach to the structure of psychopathology}},
@@ -152,6 +137,15 @@
   pmid     = {23537483},
 }
 
+@article{Borsboom2017,
+  author = {Borsboom, Denny},
+  doi = {10.1002/wps.20375},
+  journal = {World Psychiatry},
+  title = {{A network theory of mental disorders}},
+  year = {2017}
+}
+
+
 @article{bowen2006,
   title={Mood variability in anxiety disorders},
   author={Bowen, Rudy and Baetz, Marilyn and Hawkes, Judy and Bowen, Angela},
@@ -163,6 +157,17 @@
   doi = {10.1016/j.jad.2005.12.050},
   publisher={Elsevier}
 }
+
+@article{Bringmann2015,
+  author = {Bringmann, L. F. and Lemmens, L. H.J.M. and Huibers, M. J.H. and Borsboom, D. and Tuerlinckx, F.},
+  doi = {10.1017/S0033291714001809},
+  journal = {Psychological Medicine},
+  keywords = {BDI-II,depression symptoms,longitudinal data,multilevel,network analyses,vector autoregressive (VAR)},
+  pmid = {25191855},
+  title = {{Revealing the dynamic network structure of the Beck Depression Inventory-II}},
+  year = {2015}
+}
+
 
 @Article{burton2013,
   author    = {Burton, Christopher and McKinstry, Brian and T{\u{a}}tar, Aurora Szentagotai and Serrano-Blanco, Antoni and Pagliari, Claudia and Wolters, Maria},
@@ -812,6 +817,8 @@
   url     = {http://doi.apa.org/getdoi.cfm?doi=10.1037/0893-164X.16.3.205},
 }
 
+
+
 @Article{Jacobson1991,
   author  = {Jacobson, Neil S. and Truax, Paula},
   title   = {{Clinical significance: A statistical approach to defining meaningful change in psychotherapy research.}},
@@ -1020,6 +1027,16 @@ year = {1999}
   doi = {10.1016/j.invent.2017.10.001},
   publisher={Elsevier}
 }
+
+@article{Miller2012,
+  author = {Miller, Geoffrey},
+  doi = {10.1177/1745691612441215},
+  journal = {Perspectives on Psychological Science},
+  title = {{The Smartphone Psychology Manifesto}},
+  year = {2012}
+}
+
+
 
 @Article{Moore2016,
   author        = {Moore, Raeanne C. and Depp, Colin A. and Wetherell, Julie Loebach and Lenze, Eric J.},
